5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1596_2894.log
== TEST (2019-03-21 18:55:51) 
-- CODE:
Jogo1=float(input("Digite o valor do jogo 1? ")
Jogo2=float(input("Digite o valor do jogo 2? ")
Jogo3=float(input("Digite o valor do jogo 3? ")
Jogo4=float(input("Digite o valor do jogo 4? ")
Jogo5=float(input("Digite o valor do jogo 5? ")
Jogo6=float(input("Digite o valor do jogo 6? ")
Jogo7=float(input("Digite o valor do jogo 7? ")
Jogo8=float(input("Digite o valor do jogo 8? ")
frete=45
preco=jogo1+jogo2+jogo3+jogo4+jogo5+jogo6+jogo7+jogo8+frete
print(preco)
-- ERROR:
File "XXXX", line 2
    Jogo2=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:17) 
-- CODE:
Jogo1=float(input("Digite o valor do jogo 1? "))
Jogo2=float(input("Digite o valor do jogo 2? "))
Jogo3=float(input("Digite o valor do jogo 3? "))
Jogo4=float(input("Digite o valor do jogo 4? "))
Jogo5=float(input("Digite o valor do jogo 5? "))
Jogo6=float(input("Digite o valor do jogo 6? "))
Jogo7=float(input("Digite o valor do jogo 7? "))
Jogo8=float(input("Digite o valor do jogo 8? "))
frete=45
preco=jogo1+jogo2+jogo3+jogo4+jogo5+jogo6+jogo7+jogo8+frete
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Jogo2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:54) 
-- CODE:
Jogo1=float(input("Digite o valor do jogo 1? "))
Jogo2=float(input("Digite o valor do jogo 2? "))
Jogo3=float(input("Digite o valor do jogo 3? "))
Jogo4=float(input("Digite o valor do jogo 4? "))
Jogo5=float(input("Digite o valor do jogo 5? "))
Jogo6=float(input("Digite o valor do jogo 6? "))
Jogo7=float(input("Digite o valor do jogo 7? "))
Jogo8=float(input("Digite o valor do jogo 8? "))
frete=45
preco=Jogo1+Jogo2+Jogo3+Jogo4+Jogo5+Jogo6+Jogo7+Jogo8+frete
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Jogo2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:57:03) 
-- CODE:
Jogo1=float(input("Digite o valor do jogo 1? "))
Jogo2=float(input("Digite o valor do jogo 2? "))
Jogo3=float(input("Digite o valor do jogo 3? "))
Jogo4=float(input("Digite o valor do jogo 4? "))
Jogo5=float(input("Digite o valor do jogo 5? "))
Jogo6=float(input("Digite o valor do jogo 6? "))
Jogo7=float(input("Digite o valor do jogo 7? "))
Jogo8=float(input("Digite o valor do jogo 8? "))
frete=45
preco=Jogo1+Jogo2+Jogo3+Jogo4+Jogo5+Jogo6+Jogo7+Jogo8+frete
print(preco)
-- EXECUTION TIME:
0.136942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    Jogo2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:09:31) 
-- CODE:
Jogo=float(input("Digite o valor do jogo ? "))
Jogo=Jogo*8
frete=45
preco=frente+Jogo
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco=frente+Jogo
NameError: name 'frente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:09:40) 
-- CODE:
Jogo=float(input("Digite o valor do jogo ? "))
Jogo=Jogo*8
frete=45
preco=frete+Jogo
print(preco)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:09:43) 
-- CODE:
Jogo=float(input("Digite o valor do jogo ? "))
Jogo=Jogo*8
frete=45
preco=frete+Jogo
print(preco)
-- EXECUTION TIME:
0.142525
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
